$Id: History,v 1.53 2002-04-26 16:31:35 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Apr 26, 2002 M.Asai (run-V04-00-02)
- G4RunManager re-opens geometry when G4 state becomes QUIT.

Feb 26, 2002 G.Cosmo (run-V04-00-01)
- G4RunManager.cc: fixed new date for the public patch "geant4-04-00-patch-02".

Jan 29, 2002 G.Cosmo (run-V04-00-00)
- G4RunManager.cc: fixed new date for the public patch "geant4-04-00-patch-01".

Dec 07, 2001 G.Cosmo (run-V03-02-11)
- G4RunManager.cc: fixed new date for the December public release.

Nov 27, 2001 M.Asai (run-V03-02-10)
- Change implementation in rndmSaveThisRun() and rndmSaveThisEvent().
     
Nov 23, 2001 M.Maire
- Add rndmSaveThisRun() and rndmSaveThisEvent() methods to G4RunManager.
- Add /random/ commands to G4RunMessenger

Nov 20, 2001 M.Asai (run-V03-02-09)
- Add GetVersionString() method to G4RunManager.

Oct 24, 2004 M.Asai (run-V03-02-08)

Oct 20, 2001 H.Kurasige
- Modified Set/GetCuts() related methods in G4VUserPhysicsList
  for "cut-per-materials" implementation.

Oct 24, 2001 G.Cosmo (run-V03-02-07)
- Removed references to G4GeomTestMessenger now moved to geometry/volumes
  module. Files G4RunManager[.hh.cc], GNUmakefile.
