@@ -1,4 +1,4 @@
-$Id: History,v 1.53 2002-04-26 16:31:35 asaim Exp $
+$Id: History,v 1.54 2002-05-29 03:48:01 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+May 29, 2002 H.Kurashige (run-V04-00-03)
+- Add G4VModularPhysicsList.cc
+- Use "virtual" inheritance for G4VVModularPhysicsList 
 
 Apr 26, 2002 M.Asai (run-V04-00-02)
 - G4RunManager re-opens geometry when G4 state becomes QUIT.
